--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 	</title>
 </head>
 <body>
-Hello  <script>document.write(a)</script>
+The numbers are:  <script>document.querySelector("body").innerHTML = a;</script>
 </body>
 </html>
